# Aragog

./: .dockerignore  .env.example  .gitignore  Dockerfile  PROMPT.md  README.md  app.py  config.py  docker-compose.yml  eval-golden-set.json  eval.py  index.py  main.py  pyproject.toml  server.py
backend/: README.md  config.py  docker-compose.yml  main.py  main_api.py  main_mcp.py  mcp_server.py  pyproject.toml
backend/adapters/api/: app.py  deps.py
backend/adapters/api/models/: evaluation.py  query.py  tasks.py
backend/adapters/api/routes/: documents.py  evaluation.py  query.py  tasks.py
backend/adapters/mcp/: server.py
backend/adapters/mcp/servers/: query.py
backend/components/: _markdown_utils.py  chunk_enricher.py  content_analyzer.py  docling_converter.py  metadata_enricher.py  parent_child_splitter.py  query_analyzer.py  raptor_summarizer.py
backend/core/components/: _markdown_utils.py  chunk_analyzer.py  chunk_annotator.py  dense_context_injector.py  document_analyzer.py  parent_child_splitter.py  query_analyzer.py  raptor.py
backend/core/models/: meta.py  retrieval.py
backend/core/pipelines/: _factories.py  generation.py  indexing.py  retrieval.py
backend/core/services/: evaluation_service.py  indexing_service.py  query_engine.py  retrieval_engine.py
backend/core/storage/: minio_store.py  qdrant_store.py  task_store.py
backend/docs/: architecture.md  code_style.md
backend/models/: api.py  meta.py
backend/pipelines/: _factories.py  generation.py  retrieval.py
backend/routers/: _deps.py  documents.py  evaluation.py  query.py  stream.py
backend/services/: evaluation.py  indexing.py  minio_store.py  query.py  tasks.py
components/: README.md  chunk_context_enricher.py  chunk_enricher.py  chunker.py  colbert_reranker.py  content_analyzer.py  docling_converter.py  hyde_generator.py  metadata_enricher.py  minio_store.py  parent_child_splitter.py  query_analyzer.py  raptor_summarizer.py
core/: config.py  runtime.py
core/components/: chunk_analyzer.py  colbert.py  context_injector.py  dense_context_injector.py  docling.py  document_analyzer.py  hyde.py  parent_child_splitter.py  raptor.py
core/models/: evaluation.py  indexing.py  meta.py  query.py  tasks.py  vocabulary.py
core/pipelines/: _factories.py  indexing.py  retrieval.py
core/services/: indexing_service.py  query_engine.py  retrieval_engine.py
docs/: TODOs.md  architecture.md  code_style.md  rag_research_sources.md
frontend/: README.md  app.py  chainlit.md  pyproject.toml
models/: README.md  api.py  meta.py  results.py  schemas.py
pipelines/: README.md  _embedders.py  _factories.py  generation.py  indexing.py  ingestion.py  retrieval.py
routers/: README.md  _deps.py  documents.py  evaluation.py  query.py  stream.py  tasks.py
services/: evaluation.py  indexing.py  minio_store.py  query.py  storage.py
tests/components/: test_chunk_context_enricher.py  test_content_analyzer.py  test_metadata_enricher.py  test_parent_child_splitter.py  test_query_analyzer.py
tests/pipelines/: test_embedders_utils.py  test_retrieval_pipeline_helpers.py
tests/routers/: test_documents_route.py  test_query_helpers.py  test_query_route.py
tools/: __init__.py  _helpers.py  read.py  search.py
