[project]
name = "rag-chainlit-frontend"
version = "0.1.0"
description = "Chainlit frontend for the Advanced Hybrid RAG backend"
requires-python = ">=3.13"
dependencies = [
    "chainlit>=2.9.6,<3",
    "httpx>=0.27.0,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
